# fastapi_blog

./: .gitignore  README.md  auth.py  blog.db  config.py  database.py  email_utils.py  image_utils.py  main.py  models.py  pyproject.toml  schemas.py  seed.py  snippets.txt
alembic/: env.py
alembic/versions/: 25329adea384_add_likes_to_posts.py  888dd8afc7f2_initial_schema.py
routers/: post.py  users.py
templates/: account.html  home.html  layout.html  login.html  post.html  register.html  user_posts.html
tests/: conftest.py  test_posts.py  test_users.py
