[project]
name = "fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
    "sqlalchemy>=2.0.50",
]
